[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal_rpg"
version = "0.1.0"
description = "Terminal RPG for Codedex Python Checkpoint"
readme = "README.md"
keywords = ["python", "package"]
dependencies = [
    "pygame"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Pygame",
    "Topic :: Games/Entertainment :: Role-Playing",
]

[project.optional-dependencies]
dev = ["black", "mypy", "pytest", "build"]

[project.scripts]
terminal_rpg = "terminal_rpg.__main__:main"

[project.urls]
homepage = "https://github.com/Alextibtab/codedex_python_checkpoint"
repository = "https://github.com/Alextibtab/codedex_python_checkpoint.git"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true

[tool.setuptools]
packages = [
    "terminal_rpg",
]